Fix issue with divs in image-grid not being properly aligned

--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@ footer {
 	'main main main'
 	'rel1 rel2 rel3';
 }
-.image-grid article {
+.image-grid div {
 	grid-area: main;
 	display: flex;
 	flex-direction: column;
